# win7lib

./: .gitignore  CMakeLists.txt  Install.bat  Make-32.bat  Make-64.bat  Make.bat
src/include/: hotpatch.cc  hotpatch.h  stdshit.h
src/iphlpapi_vista/: CMakeLists.txt  iphlpapi.h  iphlpapi.spec  iphlpapi2.spec  iphlpapi_main.c  iphlpapi_private.h
src/kernel32/: CMakeLists.txt  wow.5.2.3790.3959.def  x64.5.2.3790.3959.def  x86.5.2.3790.3959.def
src/kernel32_vista/: CMakeLists.txt  datetime.c  dllMain.c  fileops.c  finalpath.c  ioex.c  k32_vista.h  kernel32.spec  krnl32ex.spec  locale.c  locale.h  locale.py  log.c  process.c  setfileinfo.c  stubs.c  symlink.c  time.c
src/kernel32_vista/locale/: datetime.c  locale.c  locale.py  xxx.c
src/ntdll/: CMakeLists.txt  ntdll.h  redirect.c  redirect.def  wow.5.2.3790.3959.def
src/ntdll_vista/: CMakeLists.txt  condvar.c  dllMain.c  modmap.c  ntdll.spec  ntdllex.spec  rtl.c  rtl_vista.h  srw.c  time.c
src/shell32/: CMakeLists.txt  shell32ex.spec  x64.5.2.3790.3959.def  x86.5.2.3790.3959.def
src/shell32_vista/: CMakeLists.txt  csidlmap.h  dllMain.c  internal.cc  precomp.h  shell32.cc  shell32.def  shell32.spec  stockIcon.cc  stubs.c
src/user32/: CMakeLists.txt  user32ex.spec
src/user32_vista/: CMakeLists.txt  misc.c  user32_vista.h
src/wow64/: CMakeLists.txt  hook.c  x64.5.2.3790.3959.def
tests/: CMakeLists.txt  wine_test.h
tests/kernel32_vista/: CMakeLists.txt  lcid-locale-name.c  locale.c
tools/: CMakeLists.txt  exemod.cmake  gcc.cmake  ntv6-patch.cc  spec2def.c  spec2def.cmake  toolchain-gcc.cmake
